# tamaya

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  dist-workspace.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tamaya-cli/: Cargo.toml
crates/tamaya-cli/src/: app.rs  cli.rs  config.rs  env.rs  log.rs  main.rs  ssh.rs  validation.rs
crates/tamaya-cli/src/app/: deploy.rs  lifecycle.rs  publish.rs  status.rs  worker.rs
crates/tamaya-cli/src/scripts/: allocate-port.sh  app-units.sh  app.service  caddy-shared.sh  check.sh  delete-purge.sh  delete-retain-data.sh  delete.sh  deploy.sh  env-list.sh  env-set.sh  env-unset.sh  health-check-failure.sh  live-domain.sh  live.sh  logs.sh  maintenance-domain.sh  maintenance.html  maintenance.sh  metadata-prelude.sh  metadata.sh  publish.sh  remove-caddy.sh  rollback.sh  setup.sh  status.sh  stop.sh  verify-binary-deps.sh  writable-release.sh
crates/tamaya-cli/tests/: cli.rs
demo/: Dockerfile
demo/bun/: .gitignore  README.md  next.config.js  package.json
demo/go/: .gitignore  go.mod  main.go
demo/node/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
demo/rust/: .gitignore  Cargo.toml
demo/rust/src/: config.rs  db.rs  main.rs
demo/rust/src/auth/: email.rs  errors.rs  handler.rs  mod.rs  password.rs  service.rs
demo/spa/: index.html  package-lock.json  package.json  vite.config.js
demo/zig/: .env.example  .gitignore  build.zig  build.zig.zon
doc/: index.md  package-lock.json  package.json
doc/.vitepress/: config.ts
doc/guide/: architecture.md  blue-green.md  caveats.md  config.md  deploy.md  environment.md  health-check.md  index.md  maintenance.md  publish.md  quickstart.md  why.md
doc/reference/: directory-structure.md  index.md  tamaya-toml.md
plan/: missing-checks.md
skills/tamaya/: SKILL.md
src/: app.rs  builder.rs  cli.rs  config.rs  firecracker.rs  lock.rs  log.rs  main.rs  progress.rs  registry.rs  runtime.rs  ssh.rs
tests/: cli.rs
(+77 files in other folders)
