[package]
name = "v"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
toml = "1.1.2"
