[package]
name = "tamaya"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "tamaya"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
toml = "1.1.2"
