[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
axum = "0.8.9"
bcrypt = "0.17.0"
chrono = { version = "0.4.44", features = ["clock"] }
rust-embed = { version = "8.10.0", features = ["mime-guess"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.22.0", features = ["v4"] }
